<resources>
    <string name="app_name">Weight Plate</string>

    <string name="lbl_login">LOGIN</string>
    <string name="lbl_verify">VERIFY</string>
    <string name="lbl_send_otp">SEND OTP</string>
    <string name="lbl_re_send_otp">RE-SEND OTP</string>
    <string name="lbl_resend">RE-SEND</string>
    <string name="lbl_email_verification">Email Verification</string>
    <string name="lbl_forgot_password">Forgot Password ?</string>
    <string name="lbl_create_account">Create Account</string>
    <string name="btn_lbl_signup">SIGN UP</string>
    <string name="btn_lbl_next">NEXT</string>
    <string name="btn_lbl_submit">SUBMIT</string>

    <string name="lbl_contact_us">Contact us</string>
    <string name="lbl_tell_a_friends">Tell a friends</string>
    <string name="lbl_height">Height</string>
    <string name="lbl_ft">ft</string>
    <string name="lbl_in">in</string>
    <string name="lbl_weight">Weight</string>
    <string name="lbl_kg">kg</string>
    <string name="lbl_lb">lb</string>
    <string name="lbl_date_of_birth">Date of birth</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_back">Back</string>
    <string name="lbl_start">Start</string>
    <string name="lbl_bluetooth">Bluetooth</string>
    <string name="lbl_off">OFF</string>
    <string name="lbl_on">ON</string>
    <string name="lbl_available_devices">Available Devices</string>
    <string name="lbl_scanning">Scanning...</string>
    <string name="lbl_no_device_found">No Device Found</string>
    <string name="lbl_tap_to_scan_device">Tap to scan device</string>
    <string name="lbl_please_check_your_email">Please check your email</string>
    <string name="lbl_Verification_Code">Verification Code</string>
    <string name="lbl_forgot_password_title">Forgot Password</string>
    <string name="lbl_email_id">Email Id</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_how_you_are_active">How you are active ?</string>
    <string name="lbl_what_is_your_goal">What is your goal?</string>
    <string name="lbl_oal_is_based_on_every_week">(Goal is based on every week)</string>
    <string name="lbl_reset_password">Reset Password</string>
    <string name="lbl_new_password">New Password</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="lbl_verify_otp">Verify OTP</string>
    <string name="lbl_verification_code">Verification Code</string>
    <string name="lbl_what_time_do_you_want_to_add">What time do you want to add ?</string>
    <string name="lbl_breakfast">Breakfast</string>
    <string name="lbl_lunch">Lunch</string>
    <string name="lbl_Snacks">Snacks</string>
    <string name="lbl_dinner">Dinner</string>
    <string name="lbl_goal">Goal</string>
    <string name="lbl_food">Food</string>
    <string name="lbl_remaining">Remaining</string>
    <string name="lbl_today">Today</string>
    <string name="lbl_1_how_you_are_active">1. How you are active ?</string>
    <string name="lbl_2_what_is_your_goal">2. What is your goal ? (Goal is based on every week)</string>
    <string name="lbl_to_keep_weight">To keep weight</string>
    <string name="lbl_to_lose_weight">To lose weight (Per Week)</string>
    <string name="lbl_to_gain_weight">To gain weight(Per Week)</string>
    <string name="lbl_cm">cm</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_zip_code">Zip Code</string>
    <string name="lbl_read_more">Read more...</string>
    <string name="lbl_activity">ACTIVITY</string>
    <string name="lbl_steps">STEPS</string>
    <string name="lbl_cal">CAL</string>
    <string name="lbl_km">KM</string>
    <string name="lbl_detail">Detail</string>


    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_profile">Profile</string>
    <string name="nav_menu_diary">Diary</string>
    <string name="nav_menu_gole">Goal</string>
    <string name="nav_menu_logout">Logout</string>

    <string name="dlg_title_app_close_alert_dialog">Close App</string>
    <string name="dlg_msg_app_close_alert_dialog">Are you sure, you want to close app ?</string>

    <string name="dlg_title_app_logout_alert_dialog">Logout</string>
    <string name="dlg_msg_app_logout_alert_dialog">Are you sure, you want to logout ?</string>

    <!-- Social login ids -->
    <string name="facebook_app_id">332278603833163</string>
    <string name="fb_login_protocol_scheme">fb332278603833163</string>

    <!-- Basic Detail -->
    <string name="toast.error.gender.msg">Please select gender</string>
    <string name="toast_error_birth_date_msg">Please enter birth date</string>
    <string name="toast_error_valid_birth_date_msg">Please enter valid  birth date</string>

    <!-- Add Food Activity -->
    <string name="toast.msg.food.already.selected">Food already selected</string>
    <string name="toast.msg.reconnect.device">Reconnect device</string>
    <string name="toast.msg.add.at.least.one.food">Please, Add at least one food</string>

    <!-- Splash Activity -->
    <string name="toast.msg.Permission.denied.to.your.location">Permission denied to your location</string>

    <!-- Question2 Activity -->
    <string name="toast.enter.weight">Please enter weight</string>
    <string name="toast.select.option">Please select option</string>
    <string name="toast.lose.weight">Please select lose weight</string>
    <string name="toast.gain.option">Please select gain weight</string>

    <!--Fragment_Profile -->
    <string name="btn_update_profile">Save</string>
    <string name="btn_change_pwd">Password</string>

    <string-array name="foot">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="inch">
        <item></item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>

    <!-- Validation Utils-->
    <string name="toast.select.inch">Please select inch</string>
    <string name="toast.select.feet">Please select feet</string>

    <!-- Change Password -->

    <!--  Text View  -->
    <string name="tv_current_pwd">Current Password</string>
    <string name="tv_new_pwd">New Password</string>
    <string name="tv_conform_pwd">Confirm  Password</string>

    <!-- Bluetooth Device Activity -->
    <string name="msg.turn.on.bluetooth">Turn on Bluetooth to see list of device you can pair with or have already paired with</string>
    <string name="toast.msg.phone.does.not.support.bt">Sorry !!! Your phone does not support Bluetooth</string>


    <!-- Update Profile Fragment-->
    <string name="dialog.some.thing.wrong">Please choose another image from gallery.</string>

    <!--TabGoalFragment  -->
    <string name="toast.select.option.tab.goal.fragment">Please select question 2 option</string>

    <!-- Reset Password Activity -->
    <string name="msg.confirm.password.must.be.same.as.new.password">Confirm password must be same as new password</string>
    
    <!--Email Verification -->
    
    <string name="btn_email_verification_back">&lt;&lt; Back</string>

    <!-- TabGoalFragment -->
    <string name="dialog_tab_goal_fragment_msg">This will recalculate your calorie and goal. would you like to save these changes ?</string>


    <!-- ================ -->
    <string name="lbl_take_photo">Take Photo</string>
    <string name="lbl_choose_from_gallery">Choose from Gallery</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_disconnected">Connect Now</string>
    <string name="lbl_Connected">Connected</string>
    <string name="lbl_add_to">Add to</string>
    <string name="msg_last_15days_food_show">Sorry !!! You can see only last 15 day \'s food history data from today.</string>
    <string name="toast_select_google_acc">You must select at least on google account, Otherwise STEPS, DISTANCE &amp; CALORIES not calculate</string>
    <string name="lbl_goal_activity">Goal &amp; Activity</string>
    <string name="lbl_tips">Tips</string>

    <string name="lbl_llitel_or_no_execise">Little or no exercise</string>
    <string name="lbl_exercise_1_3_daysperweek">Exercise 1–3 days per week</string>
    <string name="lbl_exercise_3_5_daysperweek">Exercise 3–5 days per week</string>
    <string name="lbl_exercise_6_7_daysperweek">Exercise 6–7 days per week</string>
    <string name="lbl_exercise_daily">Exercise daily</string>
    <string name="toast_weight_plate_paired">Weight plate Paired</string>
    <string name="toast_weight_plate_un_paired">Weight plate Unpaired</string>
    <string name="toast_connecting_to_device">Connecting to device</string>
    <string name="toast_off_bt_and_on">Sorry !!! Please OFF Bluetooth &amp; ON</string>
    <string name="lbl_fill_your_basic_details">Fill your basic details</string>


    <!-- validation Message -->
    <string name="msg_field_required">This field is required</string>
    <string name="msg_enter_valid_data">Enter valid data</string>
    <string name="msg_space_is_not_allowed">Space is not allowed</string>
    <string name="msg_enter_valid_email">Enter valid email</string>
    <string name="msg_code_must_be_6_digits">Code must be 6 digits</string>
    <string name="msg_confirm_password_does_not_match">Confirm  password does not match</string>
    <string name="msg_your_height_should_be">Your height should be 36 to 273 cm</string>
    <string name="msg_password_must_be_6_digits">Password must be 6 digits</string>
    <string name="msg_this_field_is_required">This field is required</string>

    <string name="lbl_reset">Reset</string>
    <string name="lbl_pound">Pound</string>
    <string name="lbl_feet_inch">ft (Feet and Inch)</string>

    <!-- =============== -->



</resources>
