<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@mipmap/ic_home_2"
            android:title="@string/nav_menu_home" />
        <item
            android:id="@+id/profile"
            android:icon="@mipmap/ic_profile"
            android:title="@string/nav_menu_profile" />
        <item
            android:id="@+id/diary"
            android:icon="@mipmap/ic_diary"
            android:title="@string/nav_menu_diary" />
        <!--<item
            android:id="@+id/myHelthProgress"
            android:icon="@mipmap/ic_progress"
            android:title="@string/nav_menu_my_helth_progress" />-->
        <item
            android:id="@+id/gole"
            android:icon="@mipmap/ic_goal"
            android:title="@string/nav_menu_gole" />
        <!--<item
            android:id="@+id/more"
            android:icon="@mipmap/ic_more"
            android:title="@string/nav_menu_more" />-->
        <item
            android:id="@+id/logout"
            android:icon="@mipmap/ic_log_out"
            android:title="@string/nav_menu_logout" />
    </group>

</menu>