<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_verify_code"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context="com.digitalscale.activity.EmailVerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email_varificarion" />

            <TextView
                android:id="@+id/tv_email_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/lbl_email_verification"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/txt_size_main_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_email_verification_check_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="@dimen/txt_size_title"
                android:text="@string/lbl_please_check_your_email"
                android:textColor="@color/colorOrange" />

            <EditText
                android:id="@+id/edtVerifyCodeVerificationCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:drawableLeft="@mipmap/login_icon_2"
                android:drawablePadding="10dp"
                android:hint="@string/lbl_Verification_Code"
                android:inputType="number"
                android:textSize="@dimen/txt_size_title"
                android:maxLength="6"
                android:maxLines="1"
                android:padding="10dp"
                android:textColorHint="@color/colorFontGry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_email_verification_send_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/txt_size_normal"
                    android:background="@color/colorOrange"
                    android:text="@string/lbl_verify"
                    android:textColor="@color/colorWhite" />

                <View
                    android:layout_width="1dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/btn_email_verification_re_send_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorOrange"
                    android:text="@string/lbl_resend"
                    android:textSize="@dimen/txt_size_normal"
                    android:visibility="gone"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
            <TextView
                android:id="@+id/tv_act_email_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:paddingTop="10dp"
                android:textSize="@dimen/txt_size_title"
                android:textColor="@color/colorOrange"
                android:background="@android:color/transparent"
                android:text="@string/btn_email_verification_back" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
