<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_verify_code"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:clickable="true">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="10dp"
           android:orientation="vertical">
           <TextView
               android:id="@+id/tv_frg_change_pwd_current_pwd"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="@dimen/txt_size_title"
               android:text="@string/tv_current_pwd"/>
           <EditText
               android:id="@+id/ev_frg_change_pwd_current_pwd"
               android:layout_width="match_parent"
               android:inputType="textPassword"
               android:textSize="@dimen/txt_size_title"
               android:maxLines="1"
               android:layout_height="wrap_content" />
           <TextView
               android:id="@+id/tv_frg_change_pwd_new_pwd"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="@dimen/txt_size_title"
               android:paddingTop="5dp"
               android:text="@string/tv_new_pwd"/>
           <EditText
               android:id="@+id/ev_frg_change_pwd_new_pwd"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="@dimen/txt_size_title"
               android:inputType="textPassword"
               android:maxLines="1"/>

           <TextView
               android:id="@+id/tv_frg_change_pwd_conform_pwd"
               android:layout_width="wrap_content"
               android:textSize="@dimen/txt_size_title"
               android:layout_height="wrap_content"
               android:text="@string/tv_conform_pwd"/>
           <EditText
               android:id="@+id/et_frg_change_pwd_conform_pwd"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textPassword"
               android:textSize="@dimen/txt_size_title"
               android:maxLines="1"/>
           <Button
               android:id="@+id/btn_frg_change_pwd_save"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_margin="10dp"
               android:padding="5dp"
               android:textSize="@dimen/txt_size_title"
               android:background="@color/colorOrange"
               android:gravity="center"
               android:text="@string/btn_change_pwd"
               android:textColor="@color/white" />
       </LinearLayout>
    </RelativeLayout>
</ScrollView>