<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_verify_code"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context="com.digitalscale.activity.EmailVerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/login_icon" />

            <TextView
                android:id="@+id/tv_email_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/lbl_verify_otp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/txt_size_main_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_verify_code_forgot_pwd_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:drawableLeft="@mipmap/login_icon_2"
                android:drawablePadding="10dp"
                android:textSize="@dimen/txt_size_title"
                android:hint="@string/lbl_verification_code"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="10dp"
                android:textColorHint="@color/colorFontGry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_verify_code_forgot_pwd_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorOrange"
                    android:text="@string/lbl_verify"
                    android:textSize="@dimen/txt_size_title"
                    android:textColor="@color/colorWhite" />

                <!--<View
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"></View>-->

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
